--- a/index.hbs
+++ b/index.hbs
@@ -1,25 +1,27 @@
 {{!< default}}
 
-<main class="gh-main gh-inner">
-    <section class="gh-pagehead">
-        <header class="gh-pagehead-content">
-            <h1 class="gh-pagehead-title">Past issues</h1>
+<main id="gh-main" class="gh-main gh-outer">
+    <div class="gh-inner">
+        <section class="gh-pagehead">
+            <header class="gh-pagehead-content">
+                <h1 class="gh-pagehead-title">Past issues</h1>
 
-            <div class="gh-pagehead-description">
-                {{#if description}}
-                    {{description}}
-                {{else}}
-                    A collection of {{plural pagination.total empty="0 issues" singular="% issue" plural="% issues"}}
-                {{/if}}
-            </div>
-        </header>
-    </section>
+                <div class="gh-pagehead-description">
+                    {{#if description}}
+                        {{description}}
+                    {{else}}
+                        A collection of {{plural pagination.total empty="0 issues" singular="% issue" plural="% issues"}}
+                    {{/if}}
+                </div>
+            </header>
+        </section>
 
-    <div class="gh-feed">
-        {{#get "posts" limit="all"}}
-            {{#foreach posts}}
-                {{> loop}}
-            {{/foreach}}
-        {{/get}}
+        <div class="gh-feed">
+            {{#get "posts" limit="all"}}
+                {{#foreach posts}}
+                    {{> loop}}
+                {{/foreach}}
+            {{/get}}
+        </div>
     </div>
 </main>
