--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -17,7 +17,7 @@
     display: none;
 }
 
-.home-template .gh-main {
+.is-home-cta #gh-main {
     padding: 0;
 }
 
@@ -56,6 +56,7 @@
 }
 
 .gh-home-subscribe-description {
+    max-width: 480px;
     margin-top: 1.6rem;
     font-size: 1.7rem;
     color: #fff;
@@ -102,6 +103,10 @@
     color: #fff;
     background-color: var(--ghost-accent-color);
     border-radius: 50%;
+}
+
+.gh-home-subscribe-btn {
+    margin-top: 4rem;
 }
 
 .gh-home-copyright {
@@ -175,7 +180,7 @@
 }
 
 .gh-home-latest-footer .gh-btn {
-    padding: 1.4rem 2rem;
+    padding: 1.4rem 2.8rem;
     font-size: 2rem;
     letter-spacing: -0.03em;
     background-color: var(--ghost-accent-color);
@@ -370,8 +375,10 @@
 }
 
 .gh-navigation {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 0.01em;
 }
 
 .gh-navigation-middle .gh-navigation-link {
@@ -488,7 +495,7 @@
 }
 
 @media (min-width: 992px) {
-    .gh-home-cta .gh-home-latest-label {
+    .gh-home-cta .gh-home-latest-label-wrapper {
         display: none;
     }
 }
