--- a/post.hbs
+++ b/post.hbs
@@ -2,73 +2,6 @@
 
 {{#post}}
 
-<main id="gh-main" class="gh-main">
-    <article class="gh-article {{post_class}}">
-        <header class="gh-article-header gh-canvas">
-            <h1 class="gh-article-title">{{title}}</h1>
-
-            {{#is "post"}}
-                <span class="gh-article-meta">
-                    {{#primary_author}}By <a href="{{url}}">{{name}}</a>{{/primary_author}}
-                    {{#if primary_tag}}
-                        in
-                        <a class="gh-article-tag" href="{{primary_tag.url}}">{{primary_tag.name}}</a>
-                    {{/if}}
-                    —
-                    <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
-                </span>
-            {{/is}}
-
-            {{#if custom_excerpt}}
-                <p class="gh-article-excerpt">{{custom_excerpt}}</p>
-            {{/if}}
-
-            {{#if feature_image}}
-                <figure class="gh-article-image">
-                    <img
-                        srcset="{{img_url feature_image size="s"}} 300w,
-                                {{img_url feature_image size="m"}} 720w,
-                                {{img_url feature_image size="l"}} 960w,
-                                {{img_url feature_image size="xl"}} 1200w,
-                                {{img_url feature_image size="xxl"}} 2000w"
-                        sizes="(max-width: 1200px) 100vw, 1200px"
-                        src="{{img_url feature_image size="xl"}}"
-                        alt="{{title}}"
-                    >
-                </figure>
-            {{/if}}
-        </header>
-
-        <div class="gh-content gh-canvas">
-            {{content}}
-        </div>
-
-        {{#is "post"}}
-            <footer class="gh-article-footer gh-canvas">
-                <nav class="gh-navigation">
-                    <div class="gh-navigation-previous">
-                        {{#prev_post}}
-                            <a class="gh-navigation-link" href="{{url}}">
-                                {{> icons/arrow-left}} <span class="gh-navigation-hide">Previous issue</span>
-                            </a>
-                        {{/prev_post}}
-                    </div>
-
-                    <div class="gh-navigation-middle">
-                        <a class="gh-navigation-link" href="/page/2">Browse archive</a>
-                    </div>
-
-                    <div class="gh-navigation-next">
-                        {{#next_post}}
-                            <a class="gh-navigation-link" href="{{url}}">
-                                <span class="gh-navigation-hide">Next issue</span> {{> icons/arrow-right}}
-                            </a>
-                        {{/next_post}}
-                    </div>
-                </nav>
-            </footer>
-        {{/is}}
-    </article>
-</main>
+{{> article}}
 
 {{/post}}
