--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}} is-head-transparent is-serif-content{{^if @member.paid}}{{#is "home"}} is-home-cta{{/is}}{{/if}}">
+<body class="{{body_class}} is-head-dark is-serif-content{{^if @member.paid}}{{#is "home"}} is-home-cta{{/is}}{{/if}}">
     <div class="gh-site">
         {{^if @member.paid}}
             {{^is "home"}}
