--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -13,7 +13,7 @@
     --font-sans: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
 }
 
-.home-template .gh-portal-triggerbtn-iframe {
+.is-home-cta .gh-portal-triggerbtn-iframe {
     display: none;
 }
 
