--- a/default.hbs
+++ b/default.hbs
@@ -8,6 +8,10 @@
     <link rel="preload" href="/fonts/mulish-var.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
 
+    <script>
+        document.documentElement.style.setProperty('--inner-height', window.innerHeight + 'px');
+    </script>
+
     {{ghost_head}}
 </head>
 
