Global head description, and add head description to Bulletin

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -234,6 +234,10 @@
     font-weight: 800;
 }
 
+.gh-head-description {
+    letter-spacing: -0.01em;
+}
+
 .gh-head-menu a {
     font-size: 1.5rem;
     font-weight: 700;
