--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,5 +1,22 @@
 <article class="gh-card {{post_class}}">
     <a class="gh-card-link" href="{{url}}">
+        {{#if @first}}
+            {{#if feature_image}}
+                <figure class="gh-card-image">
+                    <img
+                        srcset="{{img_url feature_image size="s"}} 300w,
+                                {{img_url feature_image size="m"}} 720w,
+                                {{img_url feature_image size="l"}} 960w,
+                                {{img_url feature_image size="xl"}} 1200w,
+                                {{img_url feature_image size="xxl"}} 2000w"
+                        sizes="(max-width: 1200px) 100vw, 1200px"
+                        src="{{img_url feature_image size="m"}}"
+                        alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+                    >
+                </figure>
+            {{/if}}
+        {{/if}}
+
         <time class="gh-card-date" datetime="{{date format="YYYY-MM-DD"}}">
             <span class="gh-card-month">{{date published_at format="MMM DD"}}</span>
             {{date published_at format="YYYY"}}
