Add brand color header variant

--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}} is-head-dark is-serif-content{{^if @member.paid}}{{#is "home"}} is-home-cta{{/is}}{{/if}}">
+<body class="{{body_class}} is-head-brand is-serif-content{{^if @member.paid}}{{#is "home"}} is-home-cta{{/is}}{{/if}}">
     <div class="gh-site">
         {{^if @member.paid}}
             {{^is "home"}}
