--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -40,7 +40,7 @@ h6 {
     display: grid;
     grid-template-rows: 1fr 2fr auto;
     padding: 5.6rem;
-    background-color: var(--color-darker-gray);
+    background-color: var(--ghost-accent-color);
 }
 
 .gh-home-logo {
@@ -60,7 +60,7 @@ h6 {
     margin-top: 0.4rem;
     font-size: 1.6rem;
     line-height: 1.4;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .gh-home-subscribe-title {
@@ -84,8 +84,8 @@ h6 {
     height: 64px;
     margin-top: 4rem;
     font-size: 1.9rem;
-    color: rgba(255, 255, 255, 0.7);
-    border-bottom: 4px solid rgba(255, 255, 255, 0.4);
+    color: rgba(255, 255, 255, 0.8);
+    border-bottom: 4px solid rgba(255, 255, 255, 0.6);
 }
 
 .gh-home-subscribe-input::after {
@@ -114,8 +114,8 @@ h6 {
     width: 40px;
     height: 40px;
     line-height: 0;
-    color: #fff;
-    background-color: var(--ghost-accent-color);
+    color: var(--color-darker-gray);
+    background-color: #fff;
     border-radius: 50%;
 }
 
@@ -125,7 +125,7 @@ h6 {
 
 .gh-home-copyright {
     font-size: 1.4rem;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     letter-spacing: -0.01em;
 }
 
@@ -197,7 +197,6 @@ h6 {
     padding: 1.4rem 2.8rem;
     font-size: 2rem;
     letter-spacing: -0.03em;
-    background-color: var(--ghost-accent-color);
     box-shadow: 0 27px 80px rgba(0, 0, 0, 0.07), 0 11.28px 33.4221px rgba(0, 0, 0, 0.0503198), 0 6.0308px 17.869px rgba(0, 0, 0, 0.0417275), 0 3.38082px 10.0172px rgba(0, 0, 0, 0.035), 0 1.79553px 5.32008px rgba(0, 0, 0, 0.0282725), 0 0.747159px 2.21381px rgba(0, 0, 0, 0.0196802);
     transition: transform 0.3s cubic-bezier(0.25, 0.75, 0.5, 1.25);
     transform: scale(1.25);
