Remove an emoji

--- a/home.hbs
+++ b/home.hbs
@@ -18,7 +18,7 @@
 
                 <section class="gh-home-subscribe">
                     {{^if @member}}
-                        <h2 class="gh-home-subscribe-title">Stay tuned 📬</h2>
+                        <h2 class="gh-home-subscribe-title">Stay tuned</h2>
                         <p class="gh-home-subscribe-description">Don’t miss out on the latest issues. Sign up now to get access to the library of members-only issues.</p>
 
                         <a class="gh-home-subscribe-input" href="#/portal/signup">
