--- a/tag.hbs
+++ b/tag.hbs
@@ -15,13 +15,13 @@
                 </div>
             </header>
         </section>
-    {{/tag}}
 
-    <div class="gh-feed">
-        {{#get "posts" limit="all"}}
-            {{#foreach posts}}
-                {{> loop}}
-            {{/foreach}}
-        {{/get}}
-    </div>
+        <div class="gh-feed">
+            {{#get "posts" filter="primary_tag:{{slug}}" limit="all"}}
+                {{#foreach posts}}
+                    {{> loop}}
+                {{/foreach}}
+            {{/get}}
+        </div>
+    {{/tag}}
 </main>
