--- a/home.hbs
+++ b/home.hbs
@@ -44,45 +44,43 @@
                         <img class="gh-home-latest-icon" src="{{@site.icon}}" alt="{{@site.title}}">
                     {{/if}}
 
-                    {{#get "posts" limit="1" include="authors"}}
-                        {{#foreach posts}}
-                            <article class="gh-article {{post_class}}">
-                                <header class="gh-article-header">
-                                    <h2 class="gh-article-title">{{title}}</h2>
-                                    <span class="gh-article-meta">
-                                        By {{primary_author.name}} —
-                                        <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
-                                    </span>
-                                </header>
+                    {{#foreach posts limit="1"}}
+                        <article class="gh-article {{post_class}}">
+                            <header class="gh-article-header">
+                                <h2 class="gh-article-title">{{title}}</h2>
+                                <span class="gh-article-meta">
+                                    By {{primary_author.name}} —
+                                    <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
+                                </span>
+                            </header>
 
-                                {{#if feature_image}}
-                                    <figure class="gh-article-image">
-                                        <img
-                                            srcset="{{img_url feature_image size="s"}} 300w,
-                                                    {{img_url feature_image size="m"}} 720w,
-                                                    {{img_url feature_image size="l"}} 960w,
-                                                    {{img_url feature_image size="xl"}} 1200w,
-                                                    {{img_url feature_image size="xxl"}} 2000w"
-                                            sizes="(max-width: 1200px) 100vw, 1200px"
-                                            src="{{img_url feature_image size="xl"}}"
-                                            alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
-                                        >
-                                        {{#if feature_image_caption}}
-                                            <figcaption>{{feature_image_caption}}</figcaption>
-                                        {{/if}}
-                                    </figure>
-                                {{/if}}
+                            {{#if feature_image}}
+                                <figure class="gh-article-image">
+                                    <img
+                                        srcset="{{img_url feature_image size="s"}} 300w,
+                                                {{img_url feature_image size="m"}} 720w,
+                                                {{img_url feature_image size="l"}} 960w,
+                                                {{img_url feature_image size="xl"}} 1200w,
+                                                {{img_url feature_image size="xxl"}} 2000w"
+                                        sizes="(max-width: 1200px) 100vw, 1200px"
+                                        src="{{img_url feature_image size="xl"}}"
+                                        alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+                                    >
+                                    {{#if feature_image_caption}}
+                                        <figcaption>{{feature_image_caption}}</figcaption>
+                                    {{/if}}
+                                </figure>
+                            {{/if}}
 
-                                <div class="gh-content">
-                                    {{content}}
-                                </div>
-                            </article>
+                            <div class="gh-content">
+                                {{content}}
+                            </div>
+                        </article>
 
-                            <footer class="gh-home-latest-footer">
-                                <a class="gh-btn" href="{{url}}">Read latest issue</a>
-                            </footer>
-                        {{/foreach}}
-                    {{/get}}
+                        <footer class="gh-home-latest-footer">
+                            <a class="gh-btn" href="{{url}}">Read latest issue</a>
+                        </footer>
+                    {{/foreach}}
                 </section>
 
                 <div class="gh-home-latest-label">
