--- a/partials/article.hbs
+++ b/partials/article.hbs
@@ -42,7 +42,7 @@
     </div>
 
     {{#is "home, post"}}
-        <footer class="gh-article-footer gh-canvas">
+        <footer class="gh-article-footer gh-canvas{{#prev_post}} has-prev{{/prev_post}}{{#next_post}} has-next{{/next_post}}">
             <nav class="gh-navigation">
                 <div class="gh-navigation-previous">
                     {{#prev_post}}
