Use data attribute for Portal links
fixes https://github.com/TryGhost/Themes/issues/54

--- a/home.hbs
+++ b/home.hbs
@@ -21,7 +21,7 @@
                         <h2 class="gh-home-subscribe-title">Stay tuned</h2>
                         <p class="gh-home-subscribe-description">Don’t miss out on the latest issues. Sign up now to get access to the library of members-only issues.</p>
 
-                        <a class="gh-home-subscribe-input" href="#/portal/signup">
+                        <a class="gh-home-subscribe-input" href="#/portal/signup" data-portal="signup">
                             jamie@example.com
                             <span>{{> icons/arrow-right}}</span>
                         </a>
@@ -29,7 +29,7 @@
                         <h2 class="gh-home-subscribe-title">Ready for unlimited access?</h2>
                         <p class="gh-home-subscribe-description">Upgrade to a paid account to get full access to all content.</p>
 
-                        <a class="gh-home-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans">Upgrade now</a>
+                        <a class="gh-home-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">Upgrade now</a>
                     {{/if}}
                 </section>
 
