--- a/home.hbs
+++ b/home.hbs
@@ -18,8 +18,8 @@
 
                 <section class="gh-home-subscribe">
                     {{^if @member}}
-                        <h2 class="gh-home-subscribe-title">Stay tuned</h2>
-                        <p class="gh-home-subscribe-description">Don’t miss out on the latest issues. Sign up now to get access to the library of members-only issues.</p>
+                        <h2 class="gh-home-subscribe-title">{{t "Upgrade title"}}</h2>
+                        <p class="gh-home-subscribe-description">{{t "Upgrade description"}}</p>
 
                         <a class="gh-home-subscribe-input" href="#/portal/signup" data-portal="signup">
                             jamie@example.com
@@ -27,9 +27,9 @@
                         </a>
                     {{else}}
                         <h2 class="gh-home-subscribe-title">Ready for unlimited access?</h2>
-                        <p class="gh-home-subscribe-description">Upgrade to a paid account to get full access to all content.</p>
+                        <p class="gh-home-subscribe-description">{{t "Upgrade content"}}</p>
 
-                        <a class="gh-home-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">Upgrade now</a>
+                        <a class="gh-home-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">{{t "Upgrade now"}}</a>
                     {{/if}}
                 </section>
 
@@ -78,14 +78,14 @@
                         </article>
 
                         <footer class="gh-home-latest-footer">
-                            <a class="gh-btn" href="{{url}}">Read latest issue</a>
+                            <a class="gh-btn" href="{{url}}">{{t "Read latest issue"}}</a>
                         </footer>
                     {{/foreach}}
                 </section>
 
                 <div class="gh-home-latest-label">
                     <span class="gh-home-latest-indicator"></span>
-                    Latest issue
+                    {{t "Latest issue"}}
                 </div>
             </div>
         </div>
