--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -16,6 +16,7 @@
         </nav>
 
         <div class="gh-head-actions">
+            <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
             {{#unless @member}}
                 <a class="gh-head-btn gh-btn" href="#/portal/signup" data-portal="signup">Subscribe</a>
             {{else}}
