--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,4 +1,5 @@
 @import "shared/assets/css/screen.css";
+@import "fonts.css";
 
 :root {
     --font-sans: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
